update to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ section {
 }
   
 .work-3 {
-    background-image: url("../images/calculator.jpg");
+    background-image: url("../images/mario-kart-64.jpeg");
 }
 
 .my-work-container {
