--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,7 +225,7 @@ section {
 }
   
 .work-2 {
-    background-image: url("../images/matrix.jpeg");
+    background-image: url("../images/hv-screenshot.png");
 }
   
 .work-3 {
